# gpui-term

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md
examples/: minimal.rs
src/: colors.rs  content.rs  contrast.rs  core.rs  cursor.rs  element.rs  entity.rs  font.rs  highlight.rs  keys.rs  lib.rs  mouse.rs  painter.rs  scrollbar.rs  ssh.rs  terminal.rs  url.rs
